_global/css/event.css
/* ... */
  html,
  body {
    padding: 0px;
    margin: 0px;
    height: 100%;
    width: 100%;
    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
    font-size: 14px;
  }

  * {
    box-sizing: border-box;
  }

  body {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  event-card {
    display: flex;
    flex-direction: column;
    gap: 1px;
    background-image: url(../images/cards/Event/Event_Background.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 488px;
    height: 682px;
    border-radius: 22px;
    position: absolute;
    top: 0px;
    left: 0px;
  }

  event-card-overlay {
    display: block;
    background-image: url(../images/cards/Event/Event_Overlay.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 488px;
    height: 682px;
    border-radius: 22px;
    position: absolute;
    top: 0px;
    left: 0px;
  }

  event-body {
    display:flex;
    flex-direction: column;
    height:400px;
    margin-top: -30px;
  }


  token-event{
    background-repeat: no-repeat;
    background-size: cover;
    width: 444px;
    height: 100px;
    position: absolute;
    left: 24px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center; 
    justify-content: center; 
  }

  token-event.dahan {
    background-image: url(../images/cards/Event/EventBanners/DahanBanner.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 444px;
    height: 100px;
    position: absolute;
    left: 24px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center; 
    justify-content: center; 
  }
  token-event.beasts {
    background-image: url(../images/cards/Event/EventBanners/BeastsBanner.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 444px;
    height: 100px;
    position: absolute;
    left: 24px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center; 
    justify-content: center; 
  }

  token-event.disease {
    background-image: url(../images/cards/Event/EventBanners/DiseaseBanner.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 444px;
    height: 100px;
    position: absolute;
    left: 24px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center; 
    justify-content: center; 
  }

  token-event.disease-strife {
    background-image: url(../images/cards/Event/EventBanners/DiseaseStrifeBanner.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 444px;
    height: 100px;
    position: absolute;
    left: 24px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center; 
    justify-content: center; 
  }

  token-event-icon{
    display: block;
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
  }

  token-event-icon.dahan{
    background-image: url( ../images/cards/Event/EventBanners/DahanToken.png);
    width: 90px;
    height: 90px;
    top: 10px;
    left: -0px;
  }

  token-event-icon.beasts{
    display: block;
    background-image: url(../images/cards/Event/EventBanners/beast.png);
    width: 60px;
    height: 60px;
    top: 20px;
    left: 15px;
  }


  /* effect {
    top:12%;
    font-family: "JosefinSans-Regular";
    font-size: 15pt;
    letter-spacing: -1px;
    word-spacing: 0px;
    white-space: pre-line;
    position: relative;
    display: block;
    text-align: left;
    padding-top: 10px;
    padding-left: 40px;
    padding-right: 40px;
    margin-bottom: 5px;
  } */

  token-event-effect {
    font-family: "JosefinSans-Regular";
    font-size: 15pt;
    letter-spacing: -1px;
    word-spacing: 0px;
    white-space: pre-line;
    position: relative;
    display: block;
    text-align: left;
    padding-top: 10px;
    padding-left: 90px;
    padding-right: 40px;
    margin-bottom: 5px;
  }

  /* Replacements below */

  /* subevent-header {
    top:12%;
    font-family: "Name Headings";
    font-size: 15pt;
    word-spacing: 0px;
    white-space: pre-line;
    position: relative;
    display: block;
    text-align: left;
    padding-top: 10px;
    padding-left: 40px;
    padding-right: 40px;
    margin-bottom: 5px;
  } */

  /* subevent-banner-healthy{
    display: block;
    background-image: url(../images/cards/Event/EventBanners/HealthyBanner.png);
    background-repeat: no-repeat;
    background-size: cover;
    width: 155px;
    height: 44px;
    position: absolute;
    left: -60px;
    overflow: hidden;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    transform: rotate(270deg);
  } */

  /* subevent-banner-text{
    top: 30%;
    font-family: "Name Headings";
    font-size: 15pt;
    word-spacing: 0px;
    white-space: pre-line;
    position: relative;
    display: block;
    text-align: left;
    margin-bottom: 5px;
  } */

  subevent-banner{
    display: flex;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    height: 100%;
    min-height: 130px;
    width: 70px;
    position: relative;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    align-items: center;
    flex-direction: column;
  }

  subevent-banner.healthy{
    background-image: url(../images/cards/Event/EventBanners/HealthyBanner.png);
  }

  subevent-banner-text{
    font-family: "Name Headings";
    font-size: 15pt;
    position: relative;
    display: block;
    transform-origin: center;
    transform: rotate(270deg) translateX(0%);
    width: max-content;
    top: 40%;
  }

  subevent{
    display: flex;
    position: relative;
    flex-direction: row;
    width: 100%;
    height:100%;
  }

  subevent-header {
    font-family: "Name Headings";
    color: #3D2919;
    font-size: 24pt;
    word-spacing: 0px;
    white-space: pre-line;
    position: relative;
    display: block;
    text-align: center;
    padding-top: 10px;
    margin-right: 26px;
  }
/* ... */

